    * 0095 FIX: Fixed problem with portnumber in Wato Distributed Monitoring dialog
    * 0213 FIX: LDAP: Various small improvements for handling the LDAP user connector
    * 0039 FIX: Encoding bug on rendering global settings...
    * 0219 FIX: Improved output of long contact group names in WATO folders
    * 0220 FIX: Added HTML escaping to several global settings attributes

    Notifications:
    * 0005 Added notification script for sending SMS via mobilant.com...
    * 0032 FIX: mail notification plugin: replace windows forbidden characters in mail images
    * 0218 FIX: Fixed rendering of HTML mails for Outlook (at least 2013)...

    Reporting & Availability:
    * 0051 Option for showing timeline directly in availability table...
    * 0052 Visual colorization of availability according to levels...
    * 0054 New labelling options for availability table...
    * 0055 Allow grouping by host, host group or service group...
    * 0056 New concept of service periods in availability reporting...
    * 0002 You can now annotate events in the availability reporting...

    Event Console:
    * 0026 FIX: snmpd_mkevent.py: fixed crash on startup
    * 0036 FIX: fixed bug in multisite command execution...

    Livestatus:
    * 0067 livedump: new option to mark the mode at the beginning of the dump and documentation fixes...
    * 0023 FIX: table statehist: code cleanup / minor performance improvements
    * 0034 FIX: table statehist: no more missing entries if only one logfile exists


1.2.3i6:
    Core & Setup:
    * 0041 FIX: setup.py now handles non existing wwwuser gracefully...

    Checks & Agents:
    * 0040 Add agent plugin to test local hostname resolving...
    * 0020 FIX: Inventory problem with inventory_processes parameter...

    Multisite:
    * 0000 Improved performance of LDAP sync by refactoring the group sync code

    WATO:
    * 0042 FIX: Removed debug outputs from service inventory...


1.2.3i5:
    Core: