@@ -1,0 +1,8 @@
+Title: Improved handling of interface inventory states / types
+Level: 1
+Component: wato
+Version: 1.2.3i7
+Date: 1385028795
+Class: fix
+
+
