@@ -59,6 +59,7 @@
     * 0039 FIX: Encoding bug on rendering global settings...
     * 0219 FIX: Improved output of long contact group names in WATO folders
     * 0220 FIX: Added HTML escaping to several global settings attributes
+    * 0234 FIX: Improved handling of interface inventory states / types
 
     Notifications:
     * 0005 Added notification script for sending SMS via mobilant.com...
